--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,11 @@
 name = "Qsim"
 uuid = "92d7f033-344f-4b13-b604-93659c31f0f1"
 authors = ["Madhav Vijayan <39261345+madhavkrishnan@users.noreply.github.com> and contributors"]
-version = "1.0.0-DEV"
+version = "0.0.1"
+
+[deps]
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 
 [compat]
 julia = "1.5"
